@@ -69,6 +69,7 @@ i18n/it.po
 i18n/ja.po
 i18n/lt.po
 i18n/lv.po
+i18n/messages.mo
 i18n/nb.po
 i18n/nl.po
 i18n/nl_BE.po
